--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,9 +2,9 @@ pipeline {
     agent any
 
     parameters {
-        string(name: 'USERNAME', defaultValue: '', description: 'Device login username')
-        password(name: 'PASSWORD', defaultValue: '', description: 'Device login password')
-        string(name: 'CHANGE_ID', defaultValue: '', description: 'Change ID for tracking')
+        string(name: 'USERNAME', description: 'Device login username')
+        password(name: 'PASSWORD', description: 'Device login password')
+        string(name: 'CHANGE_ID', description: 'Change ID for tracking')
         choice(name: 'CHANGE_TYPE', choices: ['PRE', 'POST'], description: 'Type of Change')
         file(name: 'INPUT_CSV', description: 'Upload CSV file with device IPs and commands')
     }
@@ -20,28 +20,40 @@ pipeline {
             }
         }
 
-        stage('Prepare Workspace') {
+        stage('Prepare Environment') {
             steps {
-                sh 'mkdir -p input output'
-                // Save uploaded CSV to input folder
-                script {
-                    def csvFile = params.INPUT_CSV
-                    writeFile file: "input.csv", text: csvFile.readToString()
-                }
+                sh '''
+                    python3 -m venv venv
+                    . venv/bin/activate
+                    pip install -r requirements.txt
+                    mkdir -p input output
+                '''
             }
         }
 
-        stage('Run Python Script') {
+        stage('Handle Input CSV') {
             steps {
-                sh """
-                    ${env.PYTHON} change-captures.py \
-                    --csv input.csv \
-                    --username ${params.USERNAME} \
-                    --password ${params.PASSWORD} \
-                    --change_id ${params.CHANGE_ID} \
-                    --change_type ${params.CHANGE_TYPE} \
-                    --output ${params.CHANGE_TYPE}_${params.CHANGE_ID}.txt
-                """
+                sh "cp ${params.INPUT_CSV} input.csv"
+            }
+        }
+
+        stage('Run Script') {
+            steps {
+                script {
+                    // Build dynamic output filename
+                    def outFile = "output/${params.CHANGE_TYPE}_${params.CHANGE_ID}.txt"
+                    
+                    sh """
+                        . venv/bin/activate && \
+                        ${env.PYTHON} your_script.py \
+                        --csv input/devices.csv \
+                        --username ${params.USERNAME} \
+                        --password ${params.PASSWORD} \
+                        --change_id ${params.CHANGE_ID} \
+                        --change_type ${params.CHANGE_TYPE} \
+                        --output ${outFile}
+                    """
+                }
             }
         }
 
